--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,15 +3,15 @@ spring:
   application:
     name: Employee Management System App
   datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/emsdb
-    username: devuser
-    password: dev123
+    url: jdbc:mysql://us-cdbr-east-02.cleardb.com/ad_70cb8bbbc161670?user=b8fa28d956cce9&password=3760de5a
+    username: b8fa28d956cce9
+    password: 3760de5a
+    platform: mysql
 #Hibernate properties
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
   
