--- a/manifest.yml
+++ b/manifest.yml
@@ -2,14 +2,14 @@ applications:
     - name: ems-spring1
       memory: 768M
       instances: 1
-      path: target\ems-0.0.1-SNAPSHOT.jar
+      path: target/ems-0.0.1-SNAPSHOT.jar
       random-route: true
       services:
         - emsdb
     - name: ems-sprin2
       memory: 768M
       instances: 1
-      path: target\ems-0.0.1-SNAPSHOT.jar
+      path: target/ems-0.0.1-SNAPSHOT.jar
       random-route: true
       services:
         - emsdb
